--- a/src/components/css/header.css
+++ b/src/components/css/header.css
@@ -24,7 +24,7 @@
 }
 
 .icon-nav {
-    gap: 2rem;
+    gap: 1rem;
     justify-content: end;
     display: flex;
 }
@@ -40,4 +40,15 @@
 .navbar-brand {
     display: flex;
     align-items: center;
+}
+
+.notif-number {
+    position: absolute;
+    background-color: greenyellow;
+    width: 26px;
+    margin-top: -0.5rem;
+    text-align: center;
+    margin-right: 4.7rem;
+    border-radius: 7px;
+    margin-left: -1.8rem;
 }
