clean code dan styling di card produk

--- a/src/components/css/product.css
+++ b/src/components/css/product.css
@@ -36,8 +36,9 @@ h2 {
 
 .size {
     display: flex;
-    justify-content: end;
-    margin: 0 21px 0px 0px;
+    justify-content: center;
+    gap: 7rem;
+    /* margin: 0 21px 0px 0px;*/
 }
 
 .a-product {
